# unidentified_project

./: .gitignore  Pipfile  alembic.ini  database.py  docker-compose.yml  dockerfile  main.py  models.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.circleci/: config.yml
app/: __init__.py  dockerfile  main.py  providers.py
app/subscribers/: controller.py  model.py
app/test/integration/: test_subscriber_controller.py
instance/: config.py
migrations/: env.py
migrations/versions/: f62699bce63b_.py
nginx/sites-enabled/: sites.conf
scripts/: env.py  init.js
scripts/versions/: 2eff00653f73_create_subscribers_table.py
test/integration/: test_subscriber_controller.py
