[tool.poetry]
name = "plp"
version = "0.1.0"
description = ""
authors = ["Ernesto Lang <elang8899@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-injector = "^0.12.0"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"
psycopg2-binary = "^2.8"
python-dotenv = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.4"
pylint = "^2.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
